The various color blend mode, like Screen, Multipley, Lighten, etc Do not use the correct Alpha channel #61733

Closed
opened 2019-02-20 05:50:45 +01:00 by John Quillan · 4 comments

System Information
Operating system: Windows/Linux
Graphics card: N/A

Blender Version
Broken: 2.79 d75376 (2019-01-23) head
Worked: Never - Incorrect when added in commit 4b4702ab8a

I notices when using the VSE to apply some footage that was shot against a black background and meant to be blended in with Screen, had weird behavior in regards to its alpha channel, essentially clipping what was below it and showing transparency. This is a problem when you are taking that footage and transforming it, and using Screen blend mode on the transform layer.

Here are two screen shots showing the before and after the fix (https://developer.blender.org/D4371) and a simple blend file to test with.

TestColorBlendFix-Before.jpg TestColorBlendFix-After.jpg

Here is the blend file that was used TestColorBlendFix.blend

**System Information** Operating system: Windows/Linux Graphics card: N/A **Blender Version** Broken: 2.79 d75376 (2019-01-23) head Worked: Never - Incorrect when added in commit 4b4702ab8af6f7 I notices when using the VSE to apply some footage that was shot against a black background and meant to be blended in with Screen, had weird behavior in regards to its alpha channel, essentially clipping what was below it and showing transparency. This is a problem when you are taking that footage and transforming it, and using Screen blend mode on the transform layer. Here are two screen shots showing the before and after the fix (https://developer.blender.org/D4371) and a simple blend file to test with. ![TestColorBlendFix-Before.jpg](https://archive.blender.org/developer/F6666427/TestColorBlendFix-Before.jpg) ![TestColorBlendFix-After.jpg](https://archive.blender.org/developer/F6666431/TestColorBlendFix-After.jpg) Here is the blend file that was used [TestColorBlendFix.blend](https://archive.blender.org/developer/F6666438/TestColorBlendFix.blend)
Author

Added subscriber: @jquillan

Added subscriber: @jquillan
Richard Antalik was assigned by Jacques Lucke 2019-02-20 11:09:31 +01:00
Author

Another note on this: These blending mode should work the same as the Color-Mix node in the compositor which takes the alpha channel from the base/background layer (weirdly the top input). In the VSE case the base/background comes from the sequences below.

Another note on this: These blending mode should work the same as the Color-Mix node in the compositor which takes the alpha channel from the base/background layer (weirdly the top input). In the VSE case the base/background comes from the sequences below.

This issue was referenced by fdee84fd56

This issue was referenced by fdee84fd567a5bb87ee5c4ec0abfd8c79aed4801

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61733
No description provided.